--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 --extra-index-url https://download.pytorch.org/whl/cu118
-diffusers[torch]
+diffusers[torch]==0.31.0
 xformers==0.0.25
 transformers>=4.25.1
 bitsandbytes==0.35.4
@@ -11,7 +11,8 @@ trimesh==3.9.8
 pyhocon==0.3.57
 icecream==2.1.0
 PyMCubes==0.1.2
-accelerate
+accelerate==1.0.1
+huggingface-hub==0.26.5
 modelcards
 einops
 ftfy
