--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
---extra-index-url https://download.pytorch.org/whl/cu118
+--extra-index-url https://download.pytorch.org/whl/cu122
 diffusers[torch]==0.31.0
-xformers==0.0.25
+xformers==0.0.26.post1
 transformers>=4.25.1
 bitsandbytes==0.35.4
 decord==0.6.0
@@ -34,3 +34,5 @@ pyexr
 lpips
 kornia
 triton==2.2.0
+
+# pip install torch==2.3.1 torchvision==0.18.1 torchaudio==2.3.1 --index-url https://download.pytorch.org/whl/cu122
