--- a/requirements.txt
+++ b/requirements.txt
@@ -36,4 +36,8 @@ lpips
 kornia
 triton==2.2.0
 
+# python 3.11
+# module load cuda/12.2
+# module load opencv/4.9.0
+# module load rust/1.76.0
 # pip install torch==2.3.1 torchvision==0.18.1 torchaudio==2.3.1 --index-url https://download.pytorch.org/whl/cu122
